Fixed missing space under logo & nav on home

--- a/themes/hugo-ror/static/css/hugo-ror.css
+++ b/themes/hugo-ror/static/css/hugo-ror.css
@@ -13866,7 +13866,7 @@ img.ror-id {
 .section-banner {
     z-index: 1;
     padding: 0;
-    margin: -20px 0 0;
+    margin: 0;
     width: 100%;
     overflow: hidden;
 }
